@startuml Final Project - Mad Libs
'----------------------------------------------------------
' Open-ended Final Project: Mad Libs creator/player
' PlantUML class diagram. Naming: PascalCase classes/methods,
' _camelCase attributes.
'----------------------------------------------------------

abstract class Placeholder {
  - _marker : string
  --
  + Placeholder(marker : string)
  + GetMarker() : string
  + GetPrompt() : string
  + GetExample() : string
}

class NounPlaceholder {
  + NounPlaceholder()
  + GetPrompt() : string
  + GetExample() : string
}

class VerbPlaceholder {
  + VerbPlaceholder()
  + GetPrompt() : string
  + GetExample() : string
}

class AdjectivePlaceholder {
  + AdjectivePlaceholder()
  + GetPrompt() : string
  + GetExample() : string
}

class GenericPlaceholder {
  - _slotLabel : string
  --
  + GenericPlaceholder(slotLabel : string)
  + GetPrompt() : string
  + GetExample() : string
}

Placeholder <|-- NounPlaceholder
Placeholder <|-- VerbPlaceholder
Placeholder <|-- AdjectivePlaceholder
Placeholder <|-- GenericPlaceholder

class MadLibTemplate {
  - _title : string
  - _rawText : string
  --
  + MadLibTemplate(title : string, rawText : string)
  + GetTitle() : string
  + GetRawText() : string
  + GetStringRepresentation() : string
}

class PlaceholderSlot {
  - _placeholderType : string
  - _userWord : string
  - _orderIndex : int
  - _exactMarker : string
  --
  + PlaceholderSlot(type : string, orderIndex : int, exactMarkerInText : string)
  + GetPlaceholderType() : string
  + GetExactMarker() : string
  + GetUserWord() : string
  + SetUserWord(word : string) : void
  + GetOrderIndex() : int
}

class MadLibParser {
  --
  + MadLibParser()
  + ParseSlots(rawText : string) : List~PlaceholderSlot~
  + BuildFinalStory(rawText : string, slots : List~PlaceholderSlot~) : string
}

class MadLibRepository {
  - _baseDirectory : string
  --
  + MadLibRepository(baseDirectory : string)
  + GetBaseDirectory() : string
  + SaveTemplate(template : MadLibTemplate, filename : string) : void
  + LoadTemplate(filename : string) : MadLibTemplate
  + {static} ParseSavedContent(content : string, fallbackTitle : string) : MadLibTemplate
  + ListTemplateFiles() : List~string~
}

class MadLibGame {
  - _parser : MadLibParser
  - _repository : MadLibRepository
  - _lastTemplate : MadLibTemplate
  --
  + MadLibGame(parser : MadLibParser, repository : MadLibRepository)
  + CreateTemplateFromUser() : MadLibTemplate
  + PlayTemplate(template : MadLibTemplate) : void
  + RunMenu() : void
}

'----------------------------------------------------------
' Relationships (composition / usage)
'----------------------------------------------------------
MadLibGame --> MadLibParser : uses
MadLibGame --> MadLibRepository : uses
MadLibParser ..> PlaceholderSlot : creates
MadLibGame ..> Placeholder : prompts via
MadLibParser ..> MadLibTemplate : reads
MadLibRepository ..> MadLibTemplate : save/load

'----------------------------------------------------------
' Interaction (how the design fits together)
'----------------------------------------------------------
note right of MadLibGame
  **Interaction:**
  The user interacts through **MadLibGame.RunMenu()** (from **Program**).
  **Play:** **MadLibParser.ParseSlots()** finds each **{marker}** in the template text;
  the user fills each **PlaceholderSlot**; **BuildFinalStory()** substitutes words.
  **Create:** title + multi-line story with markers; **SaveTemplate** / **LoadTemplate**
  use **MadLibRepository**. Polymorphism: **Placeholder** subclasses override
  **GetPrompt()** and **GetExample()** (e.g. noun vs verb help text).
end note

@enduml
